gui_anythingllm/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ai-assistant-svc
spec:
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
  selector:
    app: ai-assistant
