gui_anythingllm/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ai-assistant
  labels: {}
spec:
  to:
    kind: Service
    name: ai-assistant-svc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  port:
    targetPort: 8888
  alternateBackends: []
